Split out the display characterization and add a helper program to test it
Long term, this will allow us to do less interactive stuff with Argyll and just
use it for profile generation.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -63,8 +63,11 @@ bin_PROGRAMS =						\
 	gcm-picker					\
 	gcm-import
 
+libexec_PROGRAMS =						\
+	gcm-calibrate-helper
+
 if HAVE_EXIV
-libexec_PROGRAMS = gcm-helper-exiv
+libexec_PROGRAMS += gcm-helper-exiv
 gcm_helper_exiv_SOURCES = gcm-helper-exiv.cpp
 gcm_helper_exiv_LDADD = $(EXIV_LIBS) $(GLIB_LIBS)
 gcm_helper_exiv_CXXFLAGS = -Wall
@@ -120,6 +123,31 @@ gcm_inspect_LDADD =					\
 	-lm
 
 gcm_inspect_CFLAGS =					\
+	$(WARNINGFLAGS_C)
+
+gcm_calibrate_helper_SOURCES =				\
+	gcm-debug.c					\
+	gcm-debug.h					\
+	gcm-utils.c					\
+	gcm-utils.h					\
+	gcm-exif.c					\
+	gcm-exif.h					\
+	gcm-calibrate.c					\
+	gcm-calibrate.h					\
+	gcm-sample-window.c				\
+	gcm-sample-window.h				\
+	gcm-calibrate-helper.c
+
+gcm_calibrate_helper_LDADD =				\
+	$(GLIB_LIBS)					\
+	$(GTK_LIBS)					\
+	$(LCMS_LIBS)					\
+	$(EXIF_LIBS)					\
+	$(TIFF_LIBS)					\
+	$(COLORD_LIBS)					\
+	-lm
+
+gcm_calibrate_helper_CFLAGS =				\
 	$(WARNINGFLAGS_C)
 
 gcm_import_SOURCES =					\
