--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -5,6 +5,7 @@ data/gcm-viewer.desktop.in
 [type: gettext/glade]data/gcm-viewer.ui
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
+src/gcm-calibrate-helper.c
 src/gcm-calibrate-main.c
 src/gcm-calibrate-native.c
 src/gcm-cell-renderer-profile-text.c
