--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -14,7 +14,7 @@ Requires:  gnome-icon-theme
 Requires:  shared-mime-info
 Requires:  shared-color-profiles
 Requires:  dconf
-Requires:  GConf2 >= 2.31.1
+Requires:  yelp
 
 BuildRequires: gtk3-devel >= 3.0.0
 BuildRequires: scrollkeeper
