trivial: Post release version bump

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -35,6 +35,7 @@ BuildRequires: libcanberra-devel
 BuildRequires: glib2-devel >= 2.25.9-2
 BuildRequires: docbook-utils
 BuildRequires: colord-devel >= 0.1.12
+BuildRequires: colord-gtk-devel >= 0.1.22
 BuildRequires: libmash-devel
 BuildRequires: clutter-gtk-devel
 BuildRequires: gnome-desktop3-devel
