Fix grammar in the AppData description

--- a/data/gcm-viewer.appdata.xml.in
+++ b/data/gcm-viewer.appdata.xml.in
@@ -10,7 +10,7 @@
     </_p>
     <_p>
       This functionality is typically used by GNOME Control Center from the color
-      panel although can be used on it's own.
+      panel although can be used on its own.
     </_p>
   </description>
   <screenshots>
