Move the AppData file into it's own directory
The screenshots will also live here soon.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,7 +2,7 @@ data/gcm-calibrate.desktop.in
 data/gcm-import.desktop.in
 data/gcm-picker.desktop.in
 [type: gettext/glade]data/gcm-picker.ui
-data/gcm-viewer.appdata.xml.in
+data/appdata/gcm-viewer.appdata.xml.in
 data/gcm-viewer.desktop.in
 [type: gettext/glade]data/gcm-viewer.ui
 src/gcm-calibrate-argyll.c
