--- a/configure.ac
+++ b/configure.ac
@@ -209,6 +209,7 @@ dnl ---------------------------------------------------------------------------
 AC_CONFIG_FILES([
 Makefile
 data/Makefile
+data/appdata/Makefile
 data/icons/Makefile
 data/icons/16x16/Makefile
 data/icons/22x22/Makefile
