--- a/data/appdata/Makefile.am
+++ b/data/appdata/Makefile.am
@@ -4,3 +4,5 @@ appdata_DATA = $(appdata_in_files:.xml.in=.xml)
 appdata_in_files = gcm-viewer.appdata.xml.in
 EXTRA_DIST = $(appdata_in_files)
 CLEANFILES = $(appdata_DATA)
+
+-include $(top_srcdir)/git.mk
