Use the new 16:9 screenshots in the AppData file

--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -15,7 +15,10 @@
     </_p>
   </description>
   <screenshots>
-    <screenshot type="default" width="1033" height="452">https://projects.gnome.org/gnome-color-manager/images/gcm-viewer-cie.png</screenshot>
+    <screenshot type="default">https://git.gnome.org/browse/gnome-color-manager/plain/data/appdata/ss-info.png</screenshot>
+    <screenshot>https://git.gnome.org/browse/gnome-color-manager/plain/data/appdata/ss-cie1931.png</screenshot>
+    <screenshot>https://git.gnome.org/browse/gnome-color-manager/plain/data/appdata/ss-calibrate.png</screenshot>
+    <screenshot>https://git.gnome.org/browse/gnome-color-manager/plain/data/appdata/ss-picker.png</screenshot>
   </screenshots>
   <url type="homepage">https://projects.gnome.org/gnome-color-manager/</url>
   <updatecontact>richard_at_hughsie.com</updatecontact>
