--- a/help/Makefile.am
+++ b/help/Makefile.am
@@ -4,7 +4,7 @@ EXTRA_DIST = C/gnome-help.its
 
 HELP_ID = gnome-color-manager
 
-HELP_LINGUAS = de el es fr
+HELP_LINGUAS = de el es fr hu
 
 HELP_MEDIA = 
 
