Use APPSTREAM_XML to validate out AppData from libappstream-glib

--- a/data/appdata/Makefile.am
+++ b/data/appdata/Makefile.am
@@ -1,8 +1,8 @@
+@APPSTREAM_XML_RULES@
 @INTLTOOL_XML_RULE@
-appdatadir = $(datadir)/appdata
-appdata_DATA = $(appdata_in_files:.xml.in=.xml)
+appstream_XML = $(appdata_in_files:.xml.in=.xml)
 appdata_in_files = gcm-viewer.appdata.xml.in
 EXTRA_DIST = $(appdata_in_files)
-CLEANFILES = $(appdata_DATA)
+CLEANFILES = $(appstream_XML)
 
 -include $(top_srcdir)/git.mk
