Remove NoDisplay=true from the gcm-viewer desktop file
This isn't typically installed by default, so we want to show it in the software
center. Also add some keywords while here.

--- a/data/gcm-viewer.desktop.in
+++ b/data/gcm-viewer.desktop.in
@@ -6,8 +6,8 @@ Exec=gcm-viewer
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;System;
+_Keywords=Color;ICC;
 StartupNotify=true
-NoDisplay=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-color-manager
 X-GNOME-Bugzilla-Component=gnome-color-manager
