--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -4,6 +4,8 @@
   <id type="desktop">gcm-viewer.desktop</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-2.0+</project_license>
+  <_name>GNOME Color Manager</_name>
+  <_summary>Inspect and compare installed color profiles</_summary>
   <description>
     <_p>
       GNOME Color Profile Viewer shows installed color profiles on your system
