--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -23,6 +23,20 @@
     <screenshot>https://git.gnome.org/browse/gnome-color-manager/plain/data/appdata/ss-calibrate.png</screenshot>
     <screenshot>https://git.gnome.org/browse/gnome-color-manager/plain/data/appdata/ss-picker.png</screenshot>
   </screenshots>
+  <!--
+   Validate with `appstream-util validate *.appdata.xml`
+   Use `date -d "2010-10-02" "+%s"` to get the timestamp.
+  -->
+  <releases>
+    <release version="3.15.4" timestamp="1421625600">
+      <description>
+        <p>This release fixes the following bug:</p>
+        <ul>
+          <li>Make the color profile viewer visible in the software center</li>
+        </ul>
+      </description>
+    </release>
+  </releases>
   <url type="homepage">https://projects.gnome.org/gnome-color-manager/</url>
   <updatecontact>richard_at_hughsie.com</updatecontact>
 </application>
