--- a/Makefile.am
+++ b/Makefile.am
@@ -26,6 +26,7 @@ MAINTAINERCLEANFILES =					\
 	ltmain.sh					\
 	missing						\
 	mkinstalldirs					\
+	NEWS						\
 	test-driver
 
 CLEANFILES =						\
@@ -47,6 +48,7 @@ DISTCHECK_CONFIGURE_FLAGS = 				\
 distclean-local:
 	if test $(srdcir) = .; then :; else \
 		rm -f ChangeLog; \
+		rm -f NEWS; \
 	fi
 
 ChangeLog:
@@ -63,6 +65,14 @@ ChangeLog:
 	  echo A git checkout and git-log is required to generate this file >> $@); \
 	fi
 
-.PHONY: ChangeLog
+NEWS: data/appdata/gcm-viewer.appdata.xml
+	$(AM_V_GEN) \
+	if test -e $(APPSTREAM_UTIL); then \
+		$(APPSTREAM_UTIL) appdata-to-news $^ > $@; \
+	else \
+		touch $@; \
+	fi
+
+.PHONY: ChangeLog NEWS
 
 -include $(top_srcdir)/git.mk
