--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -28,6 +28,14 @@
    Use `date -d "2010-10-02" "+%s"` to get the timestamp.
   -->
   <releases>
+    <release version="3.15.90" timestamp="1424076140">
+      <description>
+      <p>
+        This release switches the profile viewer application to use a headerbar
+        to match other GNOME3 applications.
+      </p>
+      </description>
+    </release>
     <release version="3.15.4" timestamp="1421625600">
       <description>
         <p>This release fixes the following bug:</p>
