--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -28,6 +28,11 @@
    Use `date -d "2010-10-02" "+%s"` to get the timestamp.
   -->
   <releases>
+    <release version="3.15.91" timestamp="1425299116">
+      <description>
+        <p>This release only updates translations.</p>
+      </description>
+    </release>
     <release version="3.15.90" timestamp="1424076140">
       <description>
       <p>
