--- a/data/gcm-viewer.desktop.in
+++ b/data/gcm-viewer.desktop.in
@@ -6,6 +6,7 @@ Exec=gcm-viewer
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;System;
+NotShowIn=GNOME;
 _Keywords=Color;ICC;
 StartupNotify=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
