--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -28,6 +28,14 @@
    Use `date -d "2010-10-02" "+%s"` to get the timestamp.
   -->
   <releases>
+    <release version="3.15.92" timestamp="1426498834">
+      <description>
+        <p>
+          This release changes the profile viewer to only show in the menu under
+          non-GNOME environments and also updates translations.
+        </p>
+      </description>
+    </release>
     <release version="3.15.91" timestamp="1425299116">
       <description>
         <p>This release only updates translations.</p>
