--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -28,6 +28,11 @@
    Use `date -d "2010-10-02" "+%s"` to get the timestamp.
   -->
   <releases>
+    <release version="3.17.90" timestamp="1439990514">
+      <description>
+        <p>This release only updates translations.</p>
+      </description>
+    </release>
     <release version="3.16.0" timestamp="1427103917">
       <description>
         <p>This stable release marks the release of GNOME 3.16!</p>
