trivial: Manually add kudos to the AppData file

--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -73,6 +73,11 @@
       </description>
     </release>
   </releases>
+  <kudos>
+    <kudo>HiDpiIcon</kudo>
+    <kudo>ModernToolkit</kudo>
+    <kudo>UserDocs</kudo>
+  </kudos>
   <url type="homepage">https://projects.gnome.org/gnome-color-manager/</url>
   <updatecontact>richard_at_hughsie.com</updatecontact>
 </application>
