--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -80,4 +80,5 @@
   </kudos>
   <url type="homepage">https://projects.gnome.org/gnome-color-manager/</url>
   <updatecontact>richard_at_hughsie.com</updatecontact>
+  <project_group>GNOME</project_group>
 </application>
