Add a missing tag to the AppData file

--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -81,4 +81,5 @@
   <url type="homepage">https://projects.gnome.org/gnome-color-manager/</url>
   <updatecontact>richard_at_hughsie.com</updatecontact>
   <project_group>GNOME</project_group>
+  <translation type="gettext">gnome-color-manager</translation>
 </application>
