--- a/help/Makefile.am
+++ b/help/Makefile.am
@@ -4,7 +4,7 @@ EXTRA_DIST = C/gnome-help.its
 
 HELP_ID = gnome-color-manager
 
-HELP_LINGUAS = ca cs de el es fi fr gl hu ml pt_BR sv zh_CN zh_HK zh_TW
+HELP_LINGUAS = ca cs de el es fi fr gl hu ko ml pt_BR sv zh_CN zh_HK zh_TW
 
 HELP_MEDIA = 
 
