--- a/data/appdata/gcm-viewer.appdata.xml.in
+++ b/data/appdata/gcm-viewer.appdata.xml.in
@@ -36,6 +36,11 @@
    Validate with `appstream-util validate *.appdata.xml`
   -->
   <releases>
+    <release date="2016-03-21" version="3.20.0">
+      <description>
+        <p>This is the first stable release for GNOME 3.20</p>
+      </description>
+    </release>
     <release version="3.19.90" date="2016-02-15">
       <description>
         <p>
