trivial: Fix example spec file

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -42,7 +42,7 @@ and generate color profiles in the GNOME desktop.
 
 %package utils
 Summary: Extra utilities for color profiles
-Requires: %{name}-common%{?_isa} = %{version}-%{release}
+Requires: %{name}%{?_isa} = %{version}-%{release}
 
 %description utils
 Extra utilities not normally required to calibrate.
