Use the new-style app-ids for flatpak support

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -101,10 +101,10 @@ glib-compile-schemas %{_datadir}/glib-2.0/schemas &> /dev/null || :
 %{_bindir}/gcm-inspect
 %{_bindir}/gcm-picker
 %{_bindir}/gcm-viewer
-%{_datadir}/appdata/gcm-viewer.appdata.xml
+%{_datadir}/appdata/org.gnome.ColorProfileViewer.appdata.xml
 %{_datadir}/applications/gcm-import.desktop
 %{_datadir}/applications/gcm-picker.desktop
-%{_datadir}/applications/gcm-viewer.desktop
+%{_datadir}/applications/org.gnome.ColorProfileViewer.desktop
 %{_datadir}/man/man1/gcm-import.1.gz
 %{_datadir}/man/man1/gcm-inspect.1.gz
 %{_datadir}/man/man1/gcm-picker.1.gz
