--- a/data/appdata/Makefile.am
+++ b/data/appdata/Makefile.am
@@ -1,8 +1,8 @@
 @INTLTOOL_XML_RULE@
 appdatadir = $(datadir)/appdata
 appdata_DATA = $(appdata_in_files:.xml.in=.xml)
-appdata_in_files = gcm-viewer.appdata.xml.in
+appdata_in_files = org.gnome.ColorProfileViewer.appdata.xml.in
 EXTRA_DIST = $(appdata_in_files)
-CLEANFILES = gcm-viewer.appdata.xml
+CLEANFILES = org.gnome.ColorProfileViewer.appdata.xml
 
 -include $(top_srcdir)/git.mk
