--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2013 Richard Hughes <richard@hughsie.com> -->
 <component type="desktop">
-  <id>gcm-viewer.desktop</id>
+  <id>org.gnome.ColorProfileViewer.desktop</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-2.0+</project_license>
   <_name>GNOME Color Manager</_name>
