--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,10 +1,12 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
+data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
 data/gcm-calibrate.desktop.in
 data/gcm-import.desktop.in
 data/gcm-picker.desktop.in
 [type: gettext/glade]data/gcm-picker.ui
-data/appdata/gcm-viewer.appdata.xml.in
-data/gcm-viewer.desktop.in
 [type: gettext/glade]data/gcm-viewer.ui
+data/org.gnome.ColorProfileViewer.desktop.in
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
 src/gcm-calibrate-main.c
