--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -36,6 +36,15 @@
    Validate with `appstream-util validate *.appdata.xml`
   -->
   <releases>
+    <release date="2016-08-15" version="3.21.90">
+      <description>
+        <p>This release fixes the following bugs:</p>
+        <ul>
+          <li>Update the UI files to adhere to the GNOME 3 UI guidelines</li>
+          <li>Use the new-style app-ids for flatpak support</li>
+        </ul>
+      </description>
+    </release>
     <release date="2016-03-21" version="3.20.0">
       <description>
         <p>This is the first stable release for GNOME 3.20</p>
