--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -36,6 +36,11 @@
    Validate with `appstream-util validate *.appdata.xml`
   -->
   <releases>
+    <release date="2016-09-13" version="3.21.92">
+      <description>
+        <p>This release fixes several man pages and updates translations.</p>
+      </description>
+    </release>
     <release date="2016-08-29" version="3.21.91">
       <description>
         <p>This release only updates translations.</p>
