Port away from intltool

--- a/Makefile.am
+++ b/Makefile.am
@@ -13,6 +13,8 @@ DISTCLEANFILES =					\
 
 MAINTAINERCLEANFILES =					\
 	*~						\
+	ABOUT-NLS					\
+	config.rpath					\
 	Makefile.in					\
 	aclocal.m4					\
 	compile						\
