--- a/data/gcm-calibrate.desktop.in
+++ b/data/gcm-calibrate.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Color
-_Comment=Color Calibration
+Name=Color
+Comment=Color Calibration
 Icon=gnome-color-manager
 Exec=gcm-calibrate
 Terminal=false
