--- a/data/gcm-import.desktop.in
+++ b/data/gcm-import.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=ICC Profile Installer
-_Comment=Install ICC profiles
+Name=ICC Profile Installer
+Comment=Install ICC profiles
 Categories=System;
 Exec=/usr/bin/gcm-import %F
 Terminal=false
