--- a/data/gcm-picker.desktop.in
+++ b/data/gcm-picker.desktop.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-_Name=Color Picker
-_Comment=Use the color sensor to sample spot colors
+Name=Color Picker
+Comment=Use the color sensor to sample spot colors
 Icon=gnome-color-manager
 Exec=gcm-picker
 Terminal=false
