--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -4,18 +4,18 @@
   <id>org.gnome.ColorProfileViewer.desktop</id>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-2.0+</project_license>
-  <_name>GNOME Color Manager</_name>
-  <_summary>Inspect and compare installed color profiles</_summary>
+  <name>GNOME Color Manager</name>
+  <summary>Inspect and compare installed color profiles</summary>
   <description>
-    <_p>
+    <p>
       GNOME Color Profile Viewer shows installed color profiles on your system
       and allows you to calibrate displays, printers and cameras using a
       wizard.
-    </_p>
-    <_p>
+    </p>
+    <p>
       This functionality is typically used by GNOME Control Center from the color
       panel although can be used on its own.
-    </_p>
+    </p>
   </description>
   <screenshots>
     <screenshot type="default">
