--- a/data/org.gnome.ColorProfileViewer.desktop.in
+++ b/data/org.gnome.ColorProfileViewer.desktop.in
@@ -1,13 +1,13 @@
 [Desktop Entry]
-_Name=Color Profile Viewer
-_Comment=Inspect and compare installed color profiles
+Name=Color Profile Viewer
+Comment=Inspect and compare installed color profiles
 Icon=gnome-color-manager
 Exec=gcm-viewer
 Terminal=false
 Type=Application
 Categories=GNOME;GTK;System;
 NotShowIn=GNOME;
-_Keywords=Color;ICC;
+Keywords=Color;ICC;
 StartupNotify=true
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=gnome-color-manager
