Add translator comments to .desktop files

--- a/data/gcm-import.desktop.in
+++ b/data/gcm-import.desktop.in
@@ -5,6 +5,7 @@ Categories=System;
 Exec=/usr/bin/gcm-import %F
 Terminal=false
 Type=Application
+# Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=application-vnd.iccprofile
 StartupNotify=true
 NoDisplay=true
