--- a/data/gcm-picker.desktop.in
+++ b/data/gcm-picker.desktop.in
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Color Picker
 Comment=Use the color sensor to sample spot colors
+# Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=gnome-color-manager
 Exec=gcm-picker
 Terminal=false
