--- a/data/gcm-calibrate.desktop.in
+++ b/data/gcm-calibrate.desktop.in
@@ -1,6 +1,7 @@
 [Desktop Entry]
 Name=Color
 Comment=Color Calibration
+# Translators: Do NOT translate or transliterate this text (this is an icon file name)!
 Icon=gnome-color-manager
 Exec=gcm-calibrate
 Terminal=false
