trivial: Add old desktop name to the AppData file

--- a/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
+++ b/data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
@@ -150,6 +150,9 @@
     <kudo>ModernToolkit</kudo>
     <kudo>UserDocs</kudo>
   </kudos>
+  <provides>
+    <id>gcm-viewer.desktop</id>
+  </provides>
   <url type="homepage">https://projects.gnome.org/gnome-color-manager/</url>
   <url type="bugtracker">https://bugzilla.gnome.org/enter_bug.cgi?product=gnome-color-manager</url>
   <url type="donation">http://www.gnome.org/friends/</url>
