help: add legal.xml to meson.build

--- a/help/meson.build
+++ b/help/meson.build
@@ -1,5 +1,6 @@
 gnome.yelp('gnome-color-manager',
    sources: [
+    'legal.xml',
     'color-import-linux.page',
     'color-import-windows.page',
     'color-import-osx.page',
