--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,9 +1,9 @@
+# List of source files containing translatable strings.
+# Please keep this file sorted alphabetically.
 data/appdata/org.gnome.ColorProfileViewer.appdata.xml.in
 data/gcm-calibrate.desktop.in
 data/gcm-import.desktop.in
 data/gcm-picker.desktop.in
-data/gcm-picker.ui
-data/gcm-viewer.ui
 data/org.gnome.ColorProfileViewer.desktop.in
 src/gcm-calibrate-argyll.c
 src/gcm-calibrate.c
@@ -13,5 +13,7 @@ src/gcm-debug.c
 src/gcm-import.c
 src/gcm-inspect.c
 src/gcm-picker.c
+src/gcm-picker.ui
 src/gcm-utils.c
 src/gcm-viewer.c
+src/gcm-viewer.ui
